--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,11 +1,12 @@
 .logo {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
-  color: #FFF3F2;
+  color: #ABABAB;
+  font-family: "Joan",sans-serif;
 }
 
 @media (min-width: 768px) {
   .logo {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 }
