--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,12 +1,12 @@
 .logo {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #ABABAB;
-  font-family: "Joan",sans-serif;
+  color: #8000e0;
 }
 
 @media (min-width: 768px) {
   .logo {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    font-weight: bold;
   }
 }
