--- a/src/containers/frameworks/Navigation/Navigation.module.css
+++ b/src/containers/frameworks/Navigation/Navigation.module.css
@@ -1,10 +1,10 @@
 .header {
   width: 100%;
-  height: 6rem;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10%;
+  padding: 1% 0 0 1%;
   vertical-align: middle;
 }
 
@@ -24,7 +24,7 @@
 .header a {
   color: #fff3f2;
   font-size: 1rem;
-  font-family: "Joan",sans-serif;
+  font-family: "Joan", sans-serif;
 }
 
 .header a:hover,
