--- a/src/containers/frameworks/Navigation/Navigation.module.css
+++ b/src/containers/frameworks/Navigation/Navigation.module.css
@@ -1,10 +1,10 @@
 .header {
   width: 100%;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1% 0 0 1%;
+  margin: 0;
   vertical-align: middle;
 }
 
