--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,3 +17,12 @@ a {
   box-sizing: border-box;
   color: white;
 }
+
+:root {
+  --color-bg: rgba(255, 255, 255, 0.51)
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
