basic card grid

--- a/src/containers/features/Dashboard/Dashboard.module.css
+++ b/src/containers/features/Dashboard/Dashboard.module.css
@@ -2,20 +2,19 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
+  grid-gap: 2rem;
+  margin-top: 3rem;
 }
 
 .dashboardC > div {
   background: rgba(212, 130, 130, 0.51);
-  padding: 2.4rem 5rem;
+  padding: 7.5rem 5rem;
   border-radius: 2rem;
   border: 1px solid transparent;
+  width: 75%;
+  margin: 0 auto;
 }
 
 .text {
   color: black;
-}
-
-.container {
-  width: var(--container-width-lg);
-  margin: 0 auto;
 }
