--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -1,4 +1,23 @@
-.container{
+.container {
+  display: flex;
   height: 95vh;
-  background-image: url("../../public/background.png");
+  width: 100%;
+  background-image: url("../../public/landing-page-background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.buttonContainer {
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  padding: 15rem;
+}
+.button {
+  height: 60px;
+  padding: 10px 30px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  background-color: #a8cda5;
+  border: none;
+  border-radius: 5px;
 }
