--- a/src/containers/features/Dashboard/Dashboard.module.css
+++ b/src/containers/features/Dashboard/Dashboard.module.css
@@ -1,16 +1,16 @@
 .dashboardC {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 2rem;
   grid-gap: 2rem;
   margin-top: 3rem;
+
 }
 
 .dashboardC > div {
-  background: rgba(212, 130, 130, 0.51);
+  background: rgba(158, 151, 151, 0.25);
   padding: 7.5rem 5rem;
-  border-radius: 2rem;
-  border: 1px solid transparent;
+  border-radius: 1rem;
+  border: 1px solid rgb(17, 16, 16);
   width: 75%;
   margin: 0 auto;
 }
