--- a/src/containers/features/Dashboard/SendEthereum/SendEthereum.module.css
+++ b/src/containers/features/Dashboard/SendEthereum/SendEthereum.module.css
@@ -10,6 +10,6 @@
   border: 1px solid white;
   border-radius: 5px;
   color: white;
-  margin: 20px 5px  0 5px;
-padding: 5px
+  margin: 20px 5px 0 5px;
+  padding: 5px;
 }
