card for balance

--- a/src/containers/features/Dashboard/Dashboard.module.css
+++ b/src/containers/features/Dashboard/Dashboard.module.css
@@ -18,6 +18,14 @@
   color: white;
 }
 
+.balance {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+
+}
+
 @media screen and (max-width: 800px) {
   .dashboardC {
     grid-template-columns: 1fr;
