--- a/src/containers/features/Dashboard/AddressTransactions/AddressTransactions.module.css
+++ b/src/containers/features/Dashboard/AddressTransactions/AddressTransactions.module.css
@@ -1,9 +1,16 @@
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
 .balanceCard {
-  background: #4FAF94;
+  background: #4faf94;
   border-radius: 20px;
   border: 1px solid white;
-  width: 23.125rem;
-  height: 15.938rem;
+  width: 23rem;
+  height: 14rem;
   padding-left: 15px;
 }
 
@@ -18,14 +25,14 @@
   padding: 10px;
 }
 
-.balanceContentsTop > h1{
+.balanceContentsTop > h1 {
   color: white;
 }
 
-.balanceContentsTop > h3{
+.balanceContentsTop > h3 {
   color: white;
 }
 
-.balanceContentsBottom > h4{
+.balanceContentsBottom > h4 {
   color: white;
 }
