--- a/src/containers/features/Dashboard/AddressInfo/AddressInfo.module.css
+++ b/src/containers/features/Dashboard/AddressInfo/AddressInfo.module.css
@@ -8,7 +8,10 @@
 
 .item {
   width: 100%;
-  padding: 10px;
+  padding: 5px;
   border: 1px solid white;
   border-radius: 5px;
+  color: white;
+  font-family: bold;
+  font-size: 1.5rem;
 }
