--- a/src/containers/features/Dashboard/TransactionHistory/TransactionHistory.module.css
+++ b/src/containers/features/Dashboard/TransactionHistory/TransactionHistory.module.css
@@ -1,10 +1,16 @@
 .tableContainer {
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
+.tableTitle{
+  text-align: center;
+  color: white;
+  margin-bottom: 60px;
+}
+
 .table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
